--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "8000:8000"
     environment:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - API_TOKEN=${API_TOKEN}
+      - API_TOKEN=glroQnd10M70RmYiD9uWSmRm
     volumes:
       - .:/app
     restart: always
